Fixed some alignment issues

--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,8 @@ h1 {
     margin-bottom: 30px;
 }
 
+.project {
+    height:250px;
+}
+
+
